--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,37 @@
+# TODO: get explanations/clarifications on `compose.yaml` suggested setup
+# TODO: verify `.env` placement in project structure
+# TODO: check dev auto-start & prod build with MySQL on docker container (or need MySQL server?)
+
 services:
   mysql:
-    image: 'mysql:latest'
+    image: mysql:8.4         #LTS
+    container_name: eb-mysql
+    restart: unless-stopped
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_HOST: '%'   #Allow remote connections (dev)
+#    command:
+#      - --default-authentication-plugin=mysql_native_password
+#      - --character-set-server=utf8mb4
+#      - --collection-server=utf8mb4_unicode_ci
+#      - --lower_case_table_names=1
+    volumes:
+      - eb_mysql_data:/var/lib/mysql
     ports:
-      - '3306'
+      - "3306:3306"
+#    healthcheck:
+#      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -u$$MYSQL_USER -p$$MYSQL_PASSWORD || exit 1"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+    networks:
+      - eb-net
+
+volumes:
+  eb_mysql_data:
+
+networks:
+  eb-net:
