--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,50 +5,44 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 # Database
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_electricity_business?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=dev
-spring.datasource.password=dev@password
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.data.jdbc.dialect=mysql
-
-# Database
 spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC
-#spring.datasource.username=${MYSQL_USER}
-#spring.datasource.password=${MYSQL_PASSWORD}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.data.jdbc.dialect=mysql
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.data.jdbc.dialect=mysql
 
 
 # Hibernate & JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.format_sql=true
 
 # Logging
 logging.level.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate.type.descriptor.sql=TRACE
 
 # Gmail SMTP
-#spring.mail.host=${MAIL_HOST:smtp.gmail.com}
-#spring.mail.port=${MAIL_PORT:587}
-#spring.mail.username=${MAIL_USERNAME}
-#spring.mail.password=${MAIL_PASSWORD}
-#spring.mail.protocol=smtp
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
-#spring.mail.properties.mail.smtp.connectiontimeout=5000
-#spring.mail.properties.mail.smtp.timeout=5000
-#spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 # App
 app.base.url=${APP_BASE_URL}
 
-# JWT (duration in ms)
-#app.jwt.issuer=${JWT_ISSUER}
-#app.jwt.access.expiration=${JWT_ACCESS_TTL_MS:300000}
-#app.jwt.refresh.expiration=${JWT_REFRESH_TTL_MS:604800000}
-#app.jwt.verification.expiration=${JWT_VERIFICATION_TTL_MS:2592000000}
-#app.jwt.password.expiration=${JWT_PASSWORD_TTL_MS:900000}
+# JWT (duration in ms) - Default values:
+app.jwt.issuer=${JWT_ISSUER}
+app.jwt.access.expiration=${JWT_ACCESS_TTL_MS:300000}
+app.jwt.refresh.expiration=${JWT_REFRESH_TTL_MS:604800000}
+app.jwt.verification.expiration=${JWT_VERIFICATION_TTL_MS:1296000000}
+app.jwt.password.expiration=${JWT_PASSWORD_TTL_MS:900000}
+## Access: 5 mins | Password: 15 mins | Refresh: 7 days | Verification: 15 days
