Feat: configure project env variables (3)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,8 +41,7 @@ app.base.url=${APP_BASE_URL}
 
 # JWT (duration in ms) - Default values:
 app.jwt.issuer=${JWT_ISSUER}
-app.jwt.access.expiration=${JWT_ACCESS_TTL_MS:300000}
-app.jwt.refresh.expiration=${JWT_REFRESH_TTL_MS:604800000}
-app.jwt.verification.expiration=${JWT_VERIFICATION_TTL_MS:1296000000}
-app.jwt.password.expiration=${JWT_PASSWORD_TTL_MS:900000}
-## Access: 5 mins | Password: 15 mins | Refresh: 7 days | Verification: 15 days
+app.jwt.access.expiration=${JWT_ACCESS:5m}
+app.jwt.refresh.expiration=${JWT_REFRESH:7d}
+app.jwt.verification.expiration=${JWT_VERIFICATION:1d}
+app.jwt.password.expiration=${JWT_PASSWORD:15m}
